@startuml
!theme plain

package "Domain Model" {
  class User {
    - String id
    - String username
    - byte[] serverSalt
    - String authHash
    - String encryptedVault
    - LocalDateTime createdAt
    - LocalDateTime lastLogin
    + boolean checkPassword(String password, String pepper)
    + void updatePassword(String newPassword, String pepper)
  }

  class PasswordEntry {
    - String id
    - String site
    - String encryptedLogin
    - String encryptedPassword
    - String notes
    - List<String> tags
    - LocalDateTime createdAt
    - LocalDateTime updatedAt
  }

  class Vault {
    - String version
    - List<PasswordEntry> entries
    - Map<String, Object> metadata
    + void addEntry(PasswordEntry entry)
    + void removeEntry(String id)
    + PasswordEntry findEntry(String id)
  }
}

package "Services" {
  interface CryptoService {
    + byte[] generateSalt()
    + SecretKey deriveKey(String password, byte[] salt, byte[] pepper)
    + byte[] encrypt(byte[] data, SecretKey key)
    + byte[] decrypt(byte[] encryptedData, SecretKey key)
    + String hashForAuth(String password, byte[] salt, String pepper)
  }

  class AuthService {
    - UserRepository userRepo
    - CryptoService crypto
    - PepperService pepper
    + User register(String username, String password, String encryptedVault)
    + Optional<User> authenticate(String username, String password)
    + void changePassword(String username, String oldPassword, String newPassword)
  }

  class VaultService {
    - UserRepository userRepo
    - AuditService audit
    + String getVault(String username)
    + void updateVault(String username, String encryptedVault)
    + void validateVault(String encryptedVault)
  }

  class PepperService {
    - String serverPepper
    + String getPepper()
    + byte[] combineWithPepper(byte[] data)
  }
}

package "Repositories" {
  interface UserRepository {
    + Optional<User> findByUsername(String username)
    + User save(User user)
    + boolean existsByUsername(String username)
  }

  interface AuditRepository {
    + void log(AuditEvent event)
    + List<AuditEvent> findByUser(String userId)
  }
}

package "Security" {
  class JwtTokenProvider {
    - String secret
    - long validity
    + String createToken(String username)
    + boolean validateToken(String token)
    + String getUsername(String token)
  }

  class CustomUserDetailsService {
    - UserRepository userRepo
    + UserDetails loadUserByUsername(String username)
  }
}

package "Controllers" {
  class AuthController {
    - AuthService authService
    - JwtTokenProvider tokenProvider
    + ResponseEntity<?> register(RegisterRequest request)
    + ResponseEntity<?> login(LoginRequest request)
    + ResponseEntity<?> getSalt(@PathVariable String username)
  }

  class VaultController {
    - VaultService vaultService
    - UserRepository userRepo
    + ResponseEntity<String> getVault(Principal principal)
    + ResponseEntity<?> updateVault(@RequestBody String encryptedVault, Principal principal)
  }
}

CryptoService <|.. CryptoServiceImpl : implements
AuthService --> CryptoService
AuthService --> PepperService
AuthService --> UserRepository
VaultService --> UserRepository
JwtTokenProvider --> CustomUserDetailsService
CustomUserDetailsService --> UserRepository
AuthController --> AuthService
AuthController --> JwtTokenProvider
VaultController --> VaultService
VaultController --> UserRepository

note top of CryptoService : "Использует Web Crypto API\nна клиенте и Java Cryptography\nArchitecture на сервере"
note top of PepperService : "Загружает pepper из .env\nпри старте приложения"
@enduml